copy function added & acticity tag added & bugs fixed

--- a/frontend/src/assets/css/CreatorEditor.css
+++ b/frontend/src/assets/css/CreatorEditor.css
@@ -51,7 +51,7 @@ option[disabled] {
   font-size: 0.72em;
   font-weight: bold;
   word-spacing: 0.25em;
-  color: #9dd98b;
+  color: #2fab88;
   position: relative;
 }
 .button-text {
