--- a/frontend/src/assets/css/CreatorEditor.css
+++ b/frontend/src/assets/css/CreatorEditor.css
@@ -27,12 +27,12 @@ option[disabled] {
 }
 .sum-error {
   position: absolute;
-  bottom: 0;
+  bottom: 0em;
   left: 0;
   width: 100%;
   text-align: center;
   color: rgba(255, 0, 0, 0.6);
-  font-size: 0.5em;
+  font-size: 0.45em;
   font-weight: bold;
 }
 .button-content {
